# persona-manager

./: README.md  pyproject.toml
src/: cli.py
